--- a/methods/notes.tex
+++ b/methods/notes.tex
@@ -58,12 +58,19 @@ The features of our model are as follows.
   \item The prior knowledge about the document structure
         from characters to documents is incorpolated into the model.
 \end{enumerate}
-Let me describe some terms.
-ANN is a model which imitates the mechanism of brains we have.
-Aside from the relation of ANN and brains, ANN model can be represented
+Let me describe the each items.
+First, ANN is a model which imitates the mechanism of brains we have.
+Aside from the relation of ANN and brains, an ANN model can be represented
 as a mathematical matrix function.
-And, fonts have been much familiar to you.
+Second, probably, fonts have been much familiar to you.
 A font is an image corresponding to a specific character
 and mainly used in computers to display characters to screens.
+Third, the model uses structures of documents as inputs.
+As you know, a document is made up of sentences
+and a sentence is made up of words and so on.
+Summarizing all in the list,
+the model classifies documents into sentiment classes
+building and representing fonts, characters, words, sentences, a document
+and its sentiment as matrices, vectors, or scalars.
 
 \end{document}
