--- a/slides/presentation.tex
+++ b/slides/presentation.tex
@@ -12,6 +12,7 @@
 \newcommand{\then}{\textcolor{ttiblue}{\textbf{⇒}}\hspace{1ex}}
 \newcommand{\good}{\textcolor{orange}{\textbf{◎}}\hspace{1ex}}
 \newcommand{\arrow}{\textcolor{ttiblue}{\textbf{→}}\hspace{1ex}}
+\newcommand{\set}[1]{\{#1\}}
 
 
 \title[font2char2word2sent2doc]{
@@ -32,7 +33,10 @@
 
 \begin{frame}{Sentiment classification of documents}
   \begin{itemize}
-    \item aa
+    \item A task to classify document into some sentiment classes
+    \item Do this with machine learning!
+    \item Purpose: find the best function,
+          f: \set{document}\rightarrow\set{sentiment label}
   \end{itemize}
   \begin{figure}
     \includegraphics[width=0.7\linewidth]{fig/review.png}
