--- a/slides/presentation.tex
+++ b/slides/presentation.tex
@@ -37,13 +37,15 @@
     \item Do this with machine learning!
     \item Purpose: find the best function,
           f: \set{document}\rightarrow\set{sentiment label}
+    \item Example: predicting a number of stars given by a user
+                   from the review text.
   \end{itemize}
   \begin{figure}
-    \includegraphics[width=0.7\linewidth]{fig/review.png}
+    \includegraphics[width=0.6\linewidth]{fig/review.png}
   \end{figure}
 \end{frame}
 
-\begin{frame}{Proposed Method}
+\begin{frame}{The proposed method}
   \begin{figure}
     \includegraphics[width=0.6\linewidth]{fig/fcwsd.pdf}
   \end{figure}
