Add result section

--- a/script/notes.tex
+++ b/script/notes.tex
@@ -5,9 +5,13 @@
 \date{}
 
 
+
 \begin{document}
 
 \maketitle
+
+
+\section{Introduction}
 
 Hello, everyone.
 Today, I would like to introduce my research to you.
@@ -46,6 +50,9 @@ and describes how good performance the model achived.
   \end{cases}
 \end{gather*}
 
+
+\section{The method}
+
 As others, our research proposes a new model.
 Then, let me show you what is our new model.
 The features of our model are as follows.
@@ -69,5 +76,18 @@ Summarizing all in the list,
 the model classifies documents into sentiment classes
 building and representing fonts, characters, words, sentences, a document
 and its sentiment as matrices, vectors, or scalars.
+
+
+\section{Results}
+
+Let's go to experimental results.
+Unfortunately, we don't have any good results as of today.
+This figure shows the model equal to ours without fonts
+and it doesn't work well either yet.
+This is because of the model's hyper parameters,
+which defines models during not learning but initialization of them.
+Accuracies and other performance indicators of models
+sometimes depend on hyper parameters deeply.
+Therefore, they should be tuned well and our current models aren't done enough.
 
 \end{document}
